--- a/frontend/src/app/nutriscore/nutriscore.component.html
+++ b/frontend/src/app/nutriscore/nutriscore.component.html
@@ -1,9 +1,9 @@
 <div class="nutriscore">
   <div class="nutriscore__grades">
-    <p [class.highlighted]="grade === 'a'" class="grade grade-a">A</p>
-    <p [class.highlighted]="grade === 'b'" class="grade grade-b">B</p>
-    <p [class.highlighted]="grade === 'c'" class="grade grade-c">C</p>
-    <p [class.highlighted]="grade === 'd'" class="grade grade-d">D</p>
-    <p [class.highlighted]="grade === 'e'" class="grade grade-e">E</p>
+    <p [class.fullopacity]="grade === 'all'" [class.highlighted]="grade === 'a'" class="grade grade-a">A</p>
+    <p [class.fullopacity]="grade === 'all'" [class.highlighted]="grade === 'b'" class="grade grade-b">B</p>
+    <p [class.fullopacity]="grade === 'all'" [class.highlighted]="grade === 'c'" class="grade grade-c">C</p>
+    <p [class.fullopacity]="grade === 'all'" [class.highlighted]="grade === 'd'" class="grade grade-d">D</p>
+    <p [class.fullopacity]="grade === 'all'" [class.highlighted]="grade === 'e'" class="grade grade-e">E</p>
   </div>
 </div>
