--- a/frontend/src/app/barcode-scanner/barcode-scanner.component.html
+++ b/frontend/src/app/barcode-scanner/barcode-scanner.component.html
@@ -1,6 +1,6 @@
 <div id="stream">
   <div *ngIf="!isScanning" style="position: absolute; z-index: -5">
-    <app-loader text="Initialisiere Kamera"></app-loader>
+    <app-loader text="Starte Kamera (Rückseite)"></app-loader>
   </div>
 
   <div *ngIf="isScanning" class="blob red"></div>
