--- a/frontend/src/app/nutriscore-info/nutriscore-info.component.html
+++ b/frontend/src/app/nutriscore-info/nutriscore-info.component.html
@@ -8,12 +8,12 @@
     Der <strong>Nutri-Score</strong> ist ein Wert auf einer Skala von A - E mit dem der Nährwert von Lebensmitteln bewertet wird (A = gesund, E = ungesund).
     <br />
     <br />
-    <app-nutriscore></app-nutriscore>
+    <app-nutriscore grade="a"></app-nutriscore>
     <span class="mt-1"> </span>
 
     <br />
     Enthält ein Produkt also viel Zucker, gesättigte Fettsäuren oder Salz, verschlechtert sich die Bewertung. Enthält das Produkt hingegen genügend Proteine, Ballaststoffe oder einen hohen Anteil an
-    Obst, Gemüse und Nüssen, verbessert sich die Bewertung.
+    Obst, Gemüse und Nüssen, verbessert sie sich.
 
     <br /><br />
 
