--- a/frontend/src/app/product-details/product-details.component.html
+++ b/frontend/src/app/product-details/product-details.component.html
@@ -5,7 +5,7 @@
 
 <div class="tr mt-05">
   <span>Barcode</span>
-  <span>{{ product.barcode }}</span>
+  <span>{{ product.barcode | ean13 }}</span>
 </div>
 
 <div class="tr mt-05">
